--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@
     border-style: dashed;
     text-align: center;
     color: #ffffff;
+    background-size: contain;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
 
 }
