--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%;
+    height: fit-content;
     opacity: 0.8;
 }
 
@@ -14,7 +14,7 @@
 }
 
 #heading {
-    font-size: 10vw;;
+    font-size: 10vw;
     color: #ffffff;
     font-display: auto;
     font-weight: bolder;
@@ -43,12 +43,16 @@
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
+    text-align: center;
+    font-size: 1.6vw;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
+
     
 }
 
 #picframe:hover, #content:hover {
     
-    transform: scale(1.5);
+    transform: scale(1.9);
     transition: all;
     transition-duration: 0.6s;
       
@@ -59,6 +63,7 @@
 }
 
 #content {
+    font-size: 1.4vw;
     width: auto;
     height:auto;
     background-color:black;
