--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,15 +46,16 @@
     text-align: center;
     font-size: 1.6vw;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
-
+    transition: ease-out;
+    transition-duration: 0.5s;
     
 }
 
 #picframe:hover, #content:hover {
     
-    transform: scale(1.9);
+    transform: scale(1.5);
     transition: all;
-    transition-duration: 0.6s;
+    transition-duration: 0.8s;
       
   }
 
@@ -73,7 +74,8 @@
     color: #ffffff;
     background-size: contain;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
-
+    transition: ease-out;
+    transition-duration: 0.5s;
 }
 
 
