--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@
 }
 
 #container {
-
     margin-left: -40px;
 }
 
@@ -21,7 +20,7 @@
     font-family: 'Neon', Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
     text-align: center;
     margin-top: auto;
-    padding-bottom: -30px;
+    padding-bottom: 10px;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080;
 }
 
@@ -32,7 +31,7 @@
 
 #picframe {
     width: auto;
-    height:content;
+    height:34vw;
     background-color: black;
     margin-top: -30px;
     opacity: 0.9;
